Closed Bug 281467 Opened 21 years ago Closed 21 years ago

Local nonexistent images mean page never finishes loading

Categories

(Core :: Graphics: ImageLib, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8beta1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

BUILD: 2005-01-25-06 nightly or latest trunk nightly STEPS TO REPRODUCE: 1) Create a local HTML file with one line in it: <img src="/mozilla-banner.gif"> 2) Load this file in Mozilla. ACTUAL RESULTS: throbber never stops EXPECTED RESULTS: throbber stops NOTES: If this is done via HTTP (so AsyncOpen() on the channel doesn't fail like it does for file:// in this case), the throbber stops. If the image has an alt attribute (so we replace it with alt text), the throbber stops. Is there anything I can do to usefully log loadgroups and see what types of requests are added to them?
This is an imagelib bug...
Assignee: darin → pavlov
Component: Networking → ImageLib
QA Contact: benc
Attached patch Patch — — Splinter Review
The problem is that we stick an imgRequest for the image in the cache, then fail to open the channel, but leave the imgRequest in the cache. Then the next time we try to load the image (either if the same page is loaded again, or if the same URL is present twice in the page, which was what I was testing), we get it from cache, add a listener to it, and.... wait. Since the imgRequest has not gotten OnStartRequest yet, it assumes it's still waiting on the data, so we end up with the imgRequestProxys in the loadgroup forever. Canceling the imgRequest does the right thing here -- removes it from cache.
Attachment #173796 - Flags: superreview?(darin)
Attachment #173796 - Flags: review?(pavlov)
Attachment #173796 - Flags: review?(pavlov) → review+
Blocks: 281892
This is actually preventing the layout regression tests from running, so it'd be good to get this in ASAP... Darin, any idea when you can look at this?
hmm, that patch reminds me of bug 202369, esp the last patch there... (this one sounds like a better patch, but the problem seems similar)
Yeah, that last thing there is trying to address this same issue. I prefer my patch too. ;)
Blocks: 202369
Attachment #173796 - Flags: superreview?(darin) → superreview+
Comment on attachment 173796 [details] [diff] [review] Patch Could this please be approved for 1.8b1? This is pretty safe, and makes it possible to do things like run the layout regression tests again...
Attachment #173796 - Flags: approval1.8b?
Comment on attachment 173796 [details] [diff] [review] Patch a=asa for checkin to 1.8b
Attachment #173796 - Flags: approval1.8b? → approval1.8b+
Assignee: pavlov → bzbarsky
Target Milestone: --- → mozilla1.8beta1
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: