If AsyncOpen fails, don't leave the imgRequest in the cache, since it will never deliver any notifications to its listeners.  Bug 281467, r=pavalov, sr=darin, a=asa